[package]
name = "icrosschainSwapSolana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "icrosschain_swap_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
serde = "1.0.114"
arrayref = "0.3.6"
arraystring = "0.3.0"
serde_json = "1.0.69"
solana-program = "1.9.18"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
spl-associated-token-account = {version = "~1.0.3", features = ["no-entrypoint"]}
# solana-client = "1.10.30"
# solana-sdk = "1.10.31"